--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
-body{
-    
+body {
+    background-color: black;
+    height: 95vh;
+    width: 95vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    color: green;
 }
